<resources>
    <string name="app_name">FooLo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">マイページ</string>
    <string name="home_0">HOME</string>
    <string name="home_1">会員情報</string>
    <string name="home_1_2">Name : INIAD</string>
    <string name="home_2">スタンプ数</string>
    <string name="home_2_2">Total : 1230</string>
    <string name="home_3">My Rank</string>
    <string name="home_3_2">Rank : Gold</string>
    <string name="home_4">Ranking</string>
    <string name="home_4_2">Ranking : 1056 / 2000</string>
    <string name="home_5">フレンド数</string>
    <string name="home_5_2">Total : 20</string>
    <string name="home_6">会員番号</string>
    <string name="home_6_2">Number : 0001</string>
    <string name="home_7">フレンドの集めたスタンプ数 </string>
    <string name="home_7_2">Total : 200</string>
    <string name="home_8">継続ログイン数</string>
    <string name="home_8_2">累計ログイン数</string>
    <string name="home_9">14日</string>
    <string name="home_9_2">56日</string>

    <string name="menu_gallery">値引き商品一覧</string>
    <string name="menu_slideshow">スタンプ引き換え画面</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>